--- a/views/cardProduct/productCard.html
+++ b/views/cardProduct/productCard.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-
+<html>
   <head> 
     <link rel = "stylesheet" type="text/css" href="/views/cardProduct/productCard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" /> 
+    <script src="angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="../../functions/productCard.js"></script>
   </head>
   <body ng-app="productApp" ng-controller="productController">
     <div class="row">
@@ -67,19 +69,19 @@
                   </label>
               </div>
               </div>
-          </div>
-          <div class="container-nd">
-            <div class="clothes" ng-repeat="productitem in productsdetails">
-                  <div>
-                      <div class="product-item-img">
-                          <img src={{productitem.img}} alt="">
-                      </div>
-                      <div class="product-item-detail">
-                          <h2>{{productitem.name}}</h2>
-                          <h3>{{productitem.price}}</h3>
-                      </div>
+      </div>
+      <div class="container-nd" >
+        <div class="clothes" ng-repeat="pd in products">
+              <div>
+                  <div class="product-item-img">
+                      <img src={{pd.img}} alt=""/>
                   </div>
-          </div>
-          </div>
+                  <div class="product-item-detail">
+                      <h2>{{pd.name}}</h2>
+                      <h3>{{pd.price}}</h3>
+                  </div>
+              </div>
+      </div>
+      </div>
   </body>
 </html>
