--- a/views/blog/blog.html
+++ b/views/blog/blog.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../style/style_blog.css" />
-    <link rel="stylesheet" media="mediatype and|not|only (expressions)" href="print.css">
+    <link
+      rel="stylesheet"
+      media="mediatype and|not|only (expressions)"
+      href="print.css"
+    />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="blog">
-        <div class="blog__background">
-            <div class="blog__background__direction">
-                <h1>Blogs</h1>
-                <span><b>Home ></b></span>
-                <span> Life styles</span>
-            </div>
-            <img src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/accessories.jpg?v=1589429290" />
+      <div class="blog__background">
+        <div class="blog__background__direction">
+          <h1>Blogs</h1>
+          <span><b>Home ></b></span>
+          <span> Life styles</span>
         </div>
-    
+        <img
+          src="https://cdn.shopify.com/s/files/1/0276/4616/5110/files/accessories.jpg?v=1589429290"
+        />
+      </div>
     </div>
-</body>
+  </body>
 </html>
