--- a/views/navigationbar/navigationbar.html
+++ b/views/navigationbar/navigationbar.html
@@ -7,7 +7,7 @@
   </div>
   <ul class="navbar">
     <li>
-      <a href="/">Home</a>
+      <a href="#">Home</a>
     </li>
     <li>
       <a href="#"
@@ -69,7 +69,7 @@
       </div>
     </li>
     <li>
-      <a href="../views/collections/collection_site.html"
+      <a href="../collections/collection_site.html"
         >Collection
         <img src="../../images/downarrow.svg" alt="down arr" />
       </a>
@@ -122,7 +122,7 @@
         </div>
       </div>
     </li>
-    <li><a href="#">Blogs</a></li>
+    <li><a href="../blog/blog.html">Blogs</a></li>
     <li><a href="#">Contact Us</a></li>
   </ul>
   <div class="signin">
@@ -131,7 +131,7 @@
     <a href="#">Sign up</a>
     <span>|</span>
     <img src="../../images/search.svg" alt="search icon" />
-    <a href="../views/cart.html">
+    <a href="../cart/cart.html">
       <img src="../../images/cart.svg" alt="cart icon" />
     </a>
   </div>
