--- a/views/cart/cart.html
+++ b/views/cart/cart.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Shopping Cart</title>
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../styles/cart.css" />
-    <link rel="stylesheet" href="../styles/navbar.css" />
+    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../../styles/cart.css" />
+    <link rel="stylesheet" href="../../styles/navbar.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="../../functions/index.js"></script>
     <script src="../../functions/navigationbar.js"></script>
@@ -63,6 +63,9 @@
     </script>
   </head>
   <body ng-app="AngularApp" ng-controller="CartController">
+    <div ng-app="navBar" class="component">
+      <div ng-include="'../navigationbar/navigationbar.html'"></div>
+    </div>
     <div id="headerHolder" class="row header"></div>
     <h2 style="margin-left: 5%">Shopping Cart</h2>
     <div class="cart">
