--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   height: max-content;
+  overflow-x: hidden;
 }
 
 a {
@@ -102,7 +103,7 @@ ul {
 }
 
 .product-category img {
-  width: 99%;
+  width: 95%;
 }
 
 @keyframes overlayMove {
@@ -131,7 +132,37 @@ ul {
 
 .productCard img {
   display: block;
-  width: 90%;
+  width: 80%;
+  height: 70%;
   border-bottom: 1px solid #d9d9d9;
   transition: all 1s ease-in;
+}
+
+.page-margin img {
+  width: 90%;
+  height: auto;
+}
+
+.page-margin {
+  margin-top: 5%;
+}
+
+.form-group {
+  flex-direction: column;
+  background-color:rgba(255, 255, 255, 0.8);
+  padding: 4% 14%;
+  border-radius: 5px;
+}
+
+.form-group input {
+  padding: 2%;
+  margin-top: 1%;
+  border: 0.5px solid #d9d9d9;
+  border-radius: 5px;
+  transition: 0.3s ease-in-out;
+}
+
+.sponsor img{
+  width: auto;
+  height: 90%;
 }
