--- a/views/navigationbar.html
+++ b/views/navigationbar.html
@@ -10,7 +10,7 @@
       <a href="/">Home</a>
     </li>
     <li>
-      <a href="#"
+      <a href="./shop.html"
         >Shop
         <img src="../../images/downarrow.svg" alt="down arr" />
       </a>
@@ -127,11 +127,11 @@
   </ul>
   <div class="signin">
     <img src="../../images/user.png" alt="user icon" />
-    <a href="./login.html">Login</a><span>/</span>
-    <a href="./register.html">Sign up</a>
+    <a href="views/login.html">Login</a><span>/</span>
+    <a href="views/register.html">Sign up</a>
     <span>|</span>
     <img src="../../images/search.svg" alt="search icon" />
-    <a href="./views/cart.html">
+    <a href="views/cart.html">
       <img src="../../images/cart.svg" alt="cart icon" />
     </a>
   </div>
