--- a/views/navigationbar/navigationbar.html
+++ b/views/navigationbar/navigationbar.html
@@ -127,8 +127,8 @@
   </ul>
   <div class="signin">
     <img src="../../images/user.png" alt="user icon" />
-    <a href="#">Login</a><span>/</span>
-    <a href="#">Sign up</a>
+    <a href="../login_register/login.html">Login</a><span>/</span>
+    <a href="../login_register/register.html">Sign up</a>
     <span>|</span>
     <img src="../../images/search.svg" alt="search icon" />
     <a href="../cart/cart.html">
