--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   height: max-content;
-  overflow-x: hidden;
 }
 
 a {
@@ -22,8 +21,11 @@ ul {
 }
 
 .container {
+  justify-content: space-evenly;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  column-gap: 1%;
+  row-gap: 1%;
 }
 
 .container-rd {
@@ -56,4 +58,80 @@ ul {
   .container {
     grid-template-columns: 1fr;
   }
+}
+
+.image-container {
+  position: relative;
+}
+
+.image-container .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  opacity: 0;
+  transition: all ease-in-out;
+}
+
+.image-container:hover .overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  opacity: 0.8;
+  animation: overlayMove 0.3s normal;
+  cursor: pointer;
+}
+
+.cateNav {
+  min-width: fit-content;
+  width: 30%;
+  height: 15%;
+  background-color: #3b87ee;
+  opacity: 1;
+  border-radius: 5px;
+  margin: auto;
+}
+
+.cateNav a {
+  color: white;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.product-category img {
+  width: 99%;
+}
+
+@keyframes overlayMove {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.2;
+  }
+  50% {
+    opacity: 0.4;
+  }
+  70% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 0.8;
+  }
+}
+
+.productCard {
+  border: 1px solid #d9d9d9;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.productCard img {
+  display: block;
+  width: 90%;
+  border-bottom: 1px solid #d9d9d9;
+  transition: all 1s ease-in;
 }
