--- a/views/cart/cart.html
+++ b/views/cart/cart.html
@@ -66,7 +66,7 @@
     <div ng-app="navBar" class="component">
       <div ng-include="'../navigationbar/navigationbar.html'"></div>
     </div>
-    <div id="headerHolder" class="row header"></div>
+    <!-- <div id="headerHolder" class="row header"></div> -->
     <h2 style="margin-left: 5%">Shopping Cart</h2>
     <div class="cart">
       <div class="title">
