--- a/views/login_register/login.html
+++ b/views/login_register/login.html
@@ -1,38 +1,40 @@
 ﻿<!DOCTYPE html>
 
 <html>
-
-<head>
+  <head>
     <title>Đăng nhập vào website</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="./style/style_login.css" />
-    <script type="text/javascript" src="./functions/index.js"></script>
-</head>
-<body>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../../style/style_login.css" />
+    <script type="text/javascript" src="../../functions/index.js"></script>
+  </head>
+  <body>
     <div class="container">
-        <div  class="row header"></div>
-        <div class="container-th"></div>
-        <div class="container-nd">
-            <div class="login-form">
-                <form action="" method="post">
-                    <h1>Login</h1>
-                    <div class="input-box">
-                        <i></i>
-                        <input type="email" placeholder="Type e-mail in here" required>
-                    </div>
-                    <div class="input-box">
-                        <i></i>
-                        <input type="password" placeholder="Type password in here" required>
-                    </div>
-                    <input class="container-nd" type="button" value="Login"/>
-                    <div style="text-align:center; margin:10px 0px 0px 0px">
-                        <a href="#link">Forgot your password?</a>
-                    </div>
-                    
-                </form>
+      <div class="row header"></div>
+      <div class="container-th"></div>
+      <div class="container-nd">
+        <div class="login-form">
+          <form action="" method="post">
+            <h1>Login</h1>
+            <div class="input-box">
+              <i></i>
+              <input type="email" placeholder="Type e-mail in here" required />
             </div>
+            <div class="input-box">
+              <i></i>
+              <input
+                type="password"
+                placeholder="Type password in here"
+                required
+              />
+            </div>
+            <input class="container-nd" type="button" value="Login" />
+            <div style="text-align: center; margin: 10px 0px 0px 0px">
+              <a href="#link">Forgot your password?</a>
+            </div>
+          </form>
         </div>
-        <div id="footerHolder" class="row footer"></div>
+      </div>
+      <div id="footerHolder" class="row footer"></div>
     </div>
-</body>
+  </body>
 </html>
