--- a/styles/login.css
+++ b/styles/login.css
@@ -1,126 +1,129 @@
 ﻿body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    height: max-content;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  height: max-content;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 .row {
-    width: 100%;
-    grid-column: span 12;
+  width: 100%;
+  grid-column: span 12;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .container-rd {
-    grid-column: span 4;
-    width: 100%;
+  grid-column: span 4;
+  width: 100%;
 }
 
 .container-nd {
-    grid-column: span 6;
-    width: 100%;
+  grid-column: span 6;
+  width: 100%;
 }
 
 .container-th {
-    grid-column: span 3;
-    width: 100%;
+  grid-column: span 3;
+  width: 100%;
 }
 
 .container-sm {
-    grid-column: span 2;
-    width: 100%;
+  grid-column: span 2;
+  width: 100%;
 }
 
 .centered-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 576px) {
-    .container {
-        grid-template-columns: 1fr;
-    }
+  .container {
+    grid-template-columns: 1fr;
+  }
 }
 
 .login-form {
-    width: 100%;
-    margin: 20px auto;
-    background-color: #ffffff;
-    padding: 15px;
-    border: 2px dotted #cccccc;
-    border-radius: 10px;
+  width: 100%;
+  margin: 20px auto;
+  background-color: #ffffff;
+  padding: 15px;
+  border: 2px solid #cccccc;
+  border-radius: 5px;
 }
 
 h1 {
-    color: #000000;
-    font-size: 30px;
-    margin-bottom: 25px;
+  color: #000000;
+  font-size: 30px;
+  margin-bottom: 25px;
 }
 
 .input-box {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-    .input-box input {
-        padding: 7.5px 0px 7.5px 5px;
-        margin:3px;
-        width: 100%;
-        border: 1px solid #cccccc;
-        outline: none;
-        font-size:17px;
-    }
-        .input-box input:visited {
-            border: 3px solid #cccccc;
-        }
-a {
-    text-align: center;
-    color: darkblue;
+.input-box input {
+  padding: 7.5px 0px 7.5px 5px;
+  margin: 3px;
+  width: 100%;
+  border: 1px solid #cccccc;
+  outline: none;
+  font-size: 17px;
 }
-a:hover{
-    color:midnightblue;
-    font-weight:bold;
+
+.input-box input:visited {
+  border: 3px solid #cccccc;
+}
+
+a {
+  text-align: center;
+  color: darkblue;
+}
+a:hover {
+  color: midnightblue;
 }
 .btn-box {
-    text-align: center;
-    margin-top: 30px;
+  text-align: center;
+  margin-top: 30px;
 }
-input[type=text]:focus {
-    border: 2px solid ;
-    border-radius: 4px;
-    background-color:aliceblue;
+input[type="text"]:focus {
+  border: 2px solid;
+  border-radius: 4px;
+  background-color: aliceblue;
 }
-input[type=email]:focus {
-    border: 2px solid;
-    border-radius: 4px;
-    background-color: aliceblue;
+input[type="email"]:focus {
+  border: 2px solid;
+  border-radius: 4px;
+  background-color: aliceblue;
 }
-input[type=password]:focus {
-    border: 2px solid;
-    border-radius: 4px;
-    background-color: aliceblue;
+input[type="password"]:focus {
+  border: 2px solid;
+  border-radius: 4px;
+  background-color: aliceblue;
 }
-input[type=button]:hover {
-    border: 2px solid;
-    border-radius: 4px;
-    background-color:wheat;
-    color:black;
-    border:0;
+input[type="button"]:hover {
+  border: 2px solid;
+  border-radius: 4px;
+  background-color: wheat;
+  color: black;
+  border: 0;
 }
-    input[type= button] {
-        padding: 7.5px 15px;
-        border-radius: 2px;
-        width:100%;
-        font-size:17px;
-        background-color: #000000;
-        font-weight:bold;
-        color: #ffffff;
-        border: none;
-    }
+input[type="button"] {
+  padding: 7.5px 15px;
+  border-radius: 2px;
+  width: 100%;
+  font-size: 17px;
+  background-color: #000000;
+  font-weight: bold;
+  color: #ffffff;
+  border: none;
+}
