--- a/views/index.html
+++ b/views/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>BEST Fashion</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./styles/navbar.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../styles/navbar.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script type="text/javascript" src="./functions/index.js"></script>
-    <script type="text/javascript" src="./functions/database.js"></script>
-    <script type="text/javascript" src="./functions/navigationbar.js"></script>
+    <script type="text/javascript" src="../functions/index.js"></script>
+    <script type="text/javascript" src="../functions/database.js"></script>
+    <script type="text/javascript" src="../functions/navigationbar.js"></script>
   </head>
   <body>
     <div ng-app="myApp" class="container">
@@ -268,12 +268,14 @@
           alt="img"
         />
       </div>
-
       <div class="row">
         <footer-web></footer-web>
       </div>
     </div>
-    <script type="text/javascript" src="./functions/productDisplay.js"></script>
+    <script
+      type="text/javascript"
+      src="../functions/productDisplay.js"
+    ></script>
     <script>
       const productHolder = document.getElementById("productHolder");
       displayProduct(productHolder, 8);
