--- a/views/navigationbar.html
+++ b/views/navigationbar.html
@@ -1,13 +1,13 @@
 <div class="top-comp">
   <div align="center" class="logo">
     <img id="hamburger" src="../../images/menu.svg" alt="hambuger icon" />
-    <a href="/">
+    <a href="./">
       <img src="../../images/logo.png" alt="logo" />
     </a>
   </div>
   <ul class="navbar">
     <li>
-      <a href="/">Home</a>
+      <a href="./index.html">Home</a>
     </li>
     <li>
       <a href="./shop.html"
@@ -127,11 +127,11 @@
   </ul>
   <div class="signin">
     <img src="../../images/user.png" alt="user icon" />
-    <a href="views/login.html">Login</a><span>/</span>
-    <a href="views/register.html">Sign up</a>
+    <a href="./user.html">Login</a><span>/</span>
+    <a href="./user.html">Sign up</a>
     <span>|</span>
     <img src="../../images/search.svg" alt="search icon" />
-    <a href="views/cart.html">
+    <a href="./cart.html">
       <img src="../../images/cart.svg" alt="cart icon" />
     </a>
   </div>
