--- a/views/shop.html
+++ b/views/shop.html
@@ -1,10 +1,106 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
     <title>MIU Shop</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../styles/navbar.css" />
+    <link rel="stylesheet" href="../styles/shop.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-    <script src="../functions/navigationbar.js"></script>
+    <script type="text/javascript" src="../functions/navigationbar.js"></script>
+    <script type="text/javascript" src="../functions/index.js"></script>
+    <script
+      type="text/javascript"
+      src="../functions/productDisplay.js"
+    ></script>
   </head>
-  <body ng-app=""></body>
+  <body>
+    <div ng-app="myApp" class="container">
+      <div class="row">
+        <nav-bar></nav-bar>
+      </div>
+      <div class="row">
+        <img
+          style="width: 100%; height: auto"
+          src="//cdn.shopify.com/s/files/1/0276/4616/5110/files/accessories.jpg?v=1589429290"
+          alt="img"
+        />
+      </div>
+      <div class="row container">
+        <div style="grid-column: span 2; grid-column: 2/4">
+          <h3>Product Categories</h3>
+          <div>
+            <input type="radio" name="category" value="All Categories" /><label
+              >All Categories</label
+            ><br />
+            <input type="radio" name="category" value="Shoes" /><label
+              >Shoes</label
+            ><br />
+            <input type="radio" name="category" value="Backpacks" /><label
+              >Backpacks</label
+            ><br />
+            <input type="radio" name="category" value="Accessories" /><label
+              >Accessories</label
+            >
+          </div>
+          <hr />
+          <h3>Color</h3>
+          <div style="display: flex; justify-content: space-between">
+            <div
+              class="color-picker"
+              style="width: 20px; height: 20px; background-color: black"
+            ></div>
+            <div
+              class="color-picker"
+              style="width: 20px; height: 20px; background-color: red"
+            ></div>
+            <div
+              class="color-picker"
+              style="width: 20px; height: 20px; background-color: yellow"
+            ></div>
+            <div
+              class="color-picker"
+              style="width: 20px; height: 20px; background-color: green"
+            ></div>
+            <div
+              class="color-picker"
+              style="width: 20px; height: 20px; background-color: white"
+            ></div>
+            <div
+              class="color-picker"
+              style="width: 20px; height: 20px; background-color: gray"
+            ></div>
+          </div>
+          <hr />
+          <h3>Price</h3>
+          <div>
+            <input type="radio" name="price" id="0" /><label for="0"
+              >$0 - $50</label
+            ><br />
+            <input type="radio" name="price" id="1" /><label for="1"
+              >$50 - 100</label
+            ><br />
+            <input type="radio" name="price" id="2" /><label for="2"
+              >$150 - $200</label
+            ><br />
+            <input type="radio" name="price" id="3" /><label for="3"
+              >$200 - $250</label
+            >
+          </div>
+        </div>
+        <div
+          id="productHolder"
+          class="container"
+          style="grid-column: span 8"
+        ></div>
+      </div>
+      <div class="row" style="margin-top: 10%">
+        <footer-web></footer-web>
+      </div>
+    </div>
+    <script>
+      const productHolder = document.getElementById("productHolder");
+      displayProduct(productHolder, 12);
+    </script>
+  </body>
 </html>
