--- a/public/styles/carousel.css
+++ b/public/styles/carousel.css
@@ -3,15 +3,14 @@
   --golden: #ba933e;
 }
 .slider {
-  margin: auto;
-  width: 90%;
+  width: 100%;
   border-radius: 10px;
   overflow: hidden;
 }
 
 .slides {
   width: 500%;
-  height: 500px;
+  height: 10%;
   display: flex;
 }
 
@@ -25,8 +24,8 @@
 }
 
 .slide img {
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 50%;
   margin-left: auto;
   margin-right: auto;
   display: block;
