--- a/public/styles/contactpage.css
+++ b/public/styles/contactpage.css
@@ -1,24 +1,15 @@
 .mapouter {
   position: relative;
   text-align: right;
-  margin: 10px;
-  padding: 10px;
 }
 
 .gmap_canvas {
   overflow: hidden;
-  position: absolute;
   cursor: pointer;
   top: 0;
   left: 0;
   width: 100%;
   height: 400px;
-}
-
-.container {
-  width: 100%;
-  margin: 50px;
-  padding: 100px;
 }
 
 .contact-box {
@@ -34,14 +25,13 @@
 
 .contact-right {
   flex-basis: 60%;
-  padding: 40px 60px;
   margin: 10px 40px 40px 40px;
 }
 
 input-row {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 2%;
 }
 
 .input-row .input-group {
@@ -49,8 +39,8 @@ input-row {
 }
 
 .input-group {
-  margin: 10px;
-  padding: 10px;
+  margin: 1%;
+  padding: 1%;
 }
 
 input {
@@ -70,18 +60,28 @@ textarea {
 }
 
 button {
-  background-color: #ccc;
-  width: 100px;
-  font-size: 20px;
-  outline: none;
+  background-color: #fff;
+  width: 15%;
+  font-size: 1em;
   height: 35px;
-  border-radius: 20px;
-  margin-top: 20px;
+  outline: none;
+  border: 1px solid #ccc;
+  margin-top: 1%;
   position: absolute;
+}
+
+button:hover {
+  background-color: #3b87ee;
+  color: white;
 }
 
 .contact-right h3 {
   color: #808080;
   font-weight: 600;
   margin-bottom: 30px;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
 }
