--- a/style/style_blog.css
+++ b/style/style_blog.css
@@ -35,6 +35,7 @@ body {
 }
 .blog__body__sidebar {
   flex: 3;
+  font-size: large;
 }
 .blog__body__list {
   width: 100%;
@@ -45,6 +46,7 @@ body {
 }
 .blog__body__list__item {
   flex: 50%;
+  margin-bottom: 2rem;
 }
 .blog__body__list__item > img {
   width: 90%;
@@ -56,9 +58,10 @@ body {
 }
 .blog__body__list__item > p > label {
   color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 700;
   background-color: var(--golden);
-  padding: 0.5em;
+  padding: 0.2em;
   text-align: center;
   border-radius: 3px;
   display: inline-block;
@@ -69,7 +72,7 @@ body {
 .blog__body__sidebar__search {
   position: relative;
   right: 3rem;
-  width: 70%;
+  width: 85%;
   height: auto;
   margin: 0 auto;
 }
@@ -106,6 +109,30 @@ body {
 .blog__body__list__item > button:hover {
   border-color: var(--golden);
   color: var(--golden);
+}
+.blog__body__sidebar__tags__label {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-content: space-between;
+}
+.blog__body__sidebar__tags__label > label {
+  background-color: var(--lightgray);
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: 2.5rem;
+  border-radius: 0.3em;
+  padding: 0 1rem;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  transition-duration: 0.5s;
+}
+
+.blog__body__sidebar__tags__label > label:hover {
+  background-color: var(--golden);
+  color: white;
+  font-weight: 600;
 }
 
 @media only screen and (max-width: 1000px) {
