--- a/public/styles/carousel.css
+++ b/public/styles/carousel.css
@@ -2,108 +2,132 @@
   --mediumblack: #1a1a1a;
   --golden: #ba933e;
 }
-.slider {
-  width: 100%;
-  border-radius: 10px;
-  overflow: hidden;
+* {
+  box-sizing: border-box;
 }
-
-.slides {
-  width: 500%;
-  height: 10%;
-  display: flex;
+body {
+  font-family: Verdana, sans-serif;
+  margin: 0;
 }
-
-.slides input {
+.mySlides {
   display: none;
 }
-
-.slide {
-  width: 20%;
-  transition: 2s;
-}
-
-.slide img {
+img {
+  /* vertical-align: middle; */
   width: 100%;
-  height: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+  height: auto;
 }
 
-.carousel-manual {
+/* Slideshow container */
+.slideshow-container {
+  width: 100vw;
+  height: auto;
+  position: relative;
+  z-index: 0;
+}
+.container_dot {
   position: absolute;
-  width: 100%;
-  margin-top: -40px;
-  display: flex;
-  justify-content: center;
+  bottom: 1rem;
+  left: 50%;
 }
 
-.manual-btn {
-  border: 2px solid var(--golden);
-  padding: 5px;
-  border-radius: 10px;
+/* Next & previous buttons */
+.prev,
+.next {
   cursor: pointer;
-  transition: 1s;
-}
-
-.manual-btn:not(:last-child) {
-  margin-right: 40px;
-}
-
-.manual-btn:hover {
-  background: var(--golden);
-}
-
-#radio1:checked ~ .first {
-  margin-left: 0;
-}
-
-#radio2:checked ~ .first {
-  margin-left: -20%;
-}
-
-#radio3:checked ~ .first {
-  margin-left: -40%;
-}
-
-#radio4:checked ~ .first {
-  margin-left: -60%;
-}
-
-/*css for automatic navigation*/
-
-.carousel-auto {
   position: absolute;
-  display: flex;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
   width: 100%;
-  justify-content: center;
-  margin-top: 460px;
+  text-align: center;
 }
 
-.carousel-auto div {
-  border: 2px solid var(--golden);
-  padding: 5px;
-  border-radius: 10px;
-  transition: 1s;
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
 
-.carousel-auto div:not(:last-child) {
-  margin-right: 40px;
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  border: 0.01rem solid var(--golden);
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-#radio1:checked ~ .navigation-auto .auto-btn1 {
-  background: var(--golden);
+.active,
+.dot:hover {
+  background-color: var(--golden);
 }
 
-#radio2:checked ~ .navigation-auto .auto-btn2 {
-  background: var(--golden);
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
-#radio3:checked ~ .navigation-auto .auto-btn3 {
-  background: var(--golden);
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-#radio4:checked ~ .navigation-auto .auto-btn4 {
-  background: var(--golden);
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev,
+  .next,
+  .text {
+    font-size: 11px;
+  }
 }
