--- a/public/styles/carousel.css
+++ b/public/styles/carousel.css
@@ -5,14 +5,10 @@
 * {
   box-sizing: border-box;
 }
-body {
-  font-family: Verdana, sans-serif;
-  margin: 0;
-}
 .mySlides {
   display: none;
 }
-img {
+.mySlides > img {
   /* vertical-align: middle; */
   width: 100%;
   height: auto;
