--- a/public/styles/carousel.css
+++ b/public/styles/carousel.css
@@ -12,10 +12,10 @@ body {
 .mySlides {
   display: none;
 }
-img {
+.carousel img {
   /* vertical-align: middle; */
   width: 100%;
-  height: auto;
+  height: 30vh;
 }
 
 /* Slideshow container */
