--- a/public/styles/carousel.css
+++ b/public/styles/carousel.css
@@ -117,28 +117,14 @@ h4.item > span {
 
 /* Fading animation */
 .fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+  -webkit-animation: slide 5s ease-in-out forwards;
+  -moz-animation: slide 5s ease-in-out forwards;
+  animation: slide 5s ease-in-out forwards;
 }
 
-@-webkit-keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
+@keyframes slide {
+    from {transform: transition(0,0)}
+    to {transform: transition(3em,0)}
 }
 
 /* On smaller screens, decrease text size */
