--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -67,18 +67,15 @@ h4 {
   color: #999;
 }
 
-.socials a {
-  background: #364a62;
-  width: 40px;
-  height: 40px;
-  display: inline-block;
-  margin-right: 10px;
+.socials {
+  display: flex;
+  flex-direction: row;
 }
 
-.social a i {
-  color: #e7f2f4;
-  padding: 10px 12px;
-  font-size: 20px;
+.socials a {
+  padding: 0;
+  margin: 0;
+  width: fit-content;
 }
 
 @media screen and (min-width: 600px) {
