--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -67,6 +67,7 @@ ul {
   background-color: #fff;
   border-radius: 3px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  z-index: 3;
 }
 
 .logo {
